[GTK] Webkit 1.8.2 fails to build with MinGW with spellchecking enabled https://bugs.webkit.org/show_bug.cgi?id=93255

Patch by Paweł Forysiuk <tuxator@o2.pl> on 2012-09-25
Reviewed by Martin Robinson.

Build dies because of invalid cast. Additionaly word "interface" is in use with MinGW compiler.

* WebCoreSupport/TextCheckerClientGtk.cpp:
(WebKit::TextCheckerClientGtk::checkSpellingOfString): Use String to avoid unneded casting
* webkit/webkitspellcheckerenchant.cpp:
(webkit_spell_checker_enchant_spell_checker_interface_init): rename interface -> checkerInterface

Canonical link: https://commits.webkit.org/115555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129537 268f45cc-cd09-0410-ab3c-d52691b4dbfc